--- a/public/ambitious-projects/index.html
+++ b/public/ambitious-projects/index.html
@@ -32,7 +32,7 @@
 <body>
 
 
-<nav id="nav" class="topbar">
+<nav id="nav top" class="topbar">
 
     <div class="topbar--content">
         <div class="topbar--unit--logo">  
@@ -120,7 +120,7 @@ It&rsquo;s about handling negative emotions, picking the right thing to work on,
     </small>
 
 <div class="footer--top">
-<a href="#nav">top</a>
+<a href="#top">top</a>
 </div>
 
 </footer>
