--- a/public/howiwork/index.html
+++ b/public/howiwork/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-<nav id="nav" class="topbar work--topbar">
+<nav id="nav top" class="topbar work--topbar">
 
     <div class="topbar--content">
         <div class="topbar--unit--logo">  
@@ -148,7 +148,7 @@
     </small>
 
 <div class="footer--top">
-<a href="#nav">top</a>
+<a href="#top">top</a>
 </div>
 
 </footer>
