--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -32,7 +32,7 @@
 <body>
 
 
-<nav id="nav" class="topbar">
+<nav id="nav top" class="topbar">
 
     <div class="topbar--content">
         <div class="topbar--unit--logo">  
@@ -316,7 +316,7 @@ Maybe you won&rsquo;t remember how you figured it out.</p>
     </small>
 
 <div class="footer--top">
-<a href="#nav">top</a>
+<a href="#top">top</a>
 </div>
 
 </footer>
