--- a/public/patterns/index.html
+++ b/public/patterns/index.html
@@ -36,7 +36,7 @@
 
 <section class="patterns--section">
   <h2 class="patterns--title">navbar</h2>
-  <nav id="nav" class="topbar">
+  <nav id="nav top" class="topbar">
 
     <div class="topbar--content">
         <div class="topbar--unit--logo">  
@@ -321,7 +321,7 @@ Than you can adjust to the real world without tedious redesigns:
     </small>
 
 <div class="footer--top">
-<a href="#nav">top</a>
+<a href="#top">top</a>
 </div>
 
 </footer>
