--- a/public/research-decision/index.html
+++ b/public/research-decision/index.html
@@ -32,7 +32,7 @@
 <body>
 
 
-<nav id="nav" class="topbar">
+<nav id="nav top" class="topbar">
 
     <div class="topbar--content">
         <div class="topbar--unit--logo">  
@@ -126,7 +126,7 @@ You make a decision about the next move and stop looking for crystal balls.</p>
     </small>
 
 <div class="footer--top">
-<a href="#nav">top</a>
+<a href="#top">top</a>
 </div>
 
 </footer>
