--- a/public/alt-lazy-load/index.html
+++ b/public/alt-lazy-load/index.html
@@ -32,7 +32,7 @@
 <body>
 
 
-<nav id="nav" class="topbar">
+<nav id="nav top" class="topbar">
 
     <div class="topbar--content">
         <div class="topbar--unit--logo">  
@@ -174,7 +174,7 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
     </small>
 
 <div class="footer--top">
-<a href="#nav">top</a>
+<a href="#top">top</a>
 </div>
 
 </footer>
