--- a/public/ford-marketing/index.html
+++ b/public/ford-marketing/index.html
@@ -32,7 +32,7 @@
 <body>
 
 
-<nav id="nav" class="topbar">
+<nav id="nav top" class="topbar">
 
     <div class="topbar--content">
         <div class="topbar--unit--logo">  
@@ -144,7 +144,7 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
     </small>
 
 <div class="footer--top">
-<a href="#nav">top</a>
+<a href="#top">top</a>
 </div>
 
 </footer>
