--- a/public/resilient-ui/index.html
+++ b/public/resilient-ui/index.html
@@ -32,7 +32,7 @@
 <body>
 
 
-<nav id="nav" class="topbar">
+<nav id="nav top" class="topbar">
 
     <div class="topbar--content">
         <div class="topbar--unit--logo">  
@@ -160,7 +160,7 @@ That&rsquo;s why I like typography – it&rsquo;s a tool to achieve clarity and 
     </small>
 
 <div class="footer--top">
-<a href="#nav">top</a>
+<a href="#top">top</a>
 </div>
 
 </footer>
