--- a/public/ui-coins/index.html
+++ b/public/ui-coins/index.html
@@ -32,7 +32,7 @@
 <body>
 
 
-<nav id="nav" class="topbar">
+<nav id="nav top" class="topbar">
 
     <div class="topbar--content">
         <div class="topbar--unit--logo">  
@@ -128,7 +128,7 @@ Way better than just <em>Password</em>, which will make both forms look very sim
     </small>
 
 <div class="footer--top">
-<a href="#nav">top</a>
+<a href="#top">top</a>
 </div>
 
 </footer>
