--- a/public/vim-typography/index.html
+++ b/public/vim-typography/index.html
@@ -32,7 +32,7 @@
 <body>
 
 
-<nav id="nav" class="topbar">
+<nav id="nav top" class="topbar">
 
     <div class="topbar--content">
         <div class="topbar--unit--logo">  
@@ -199,7 +199,7 @@ Consider using some of them in <code>.gvimrc</code> instead of <code>.vimrc</cod
     </small>
 
 <div class="footer--top">
-<a href="#nav">top</a>
+<a href="#top">top</a>
 </div>
 
 </footer>
