fix typos in articles

--- a/public/alt-lazy-load/index.html
+++ b/public/alt-lazy-load/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1529877953">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1530736579">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -69,7 +69,7 @@ quickly to get to the middle part and the picture wasn&rsquo;t there yet?</p>
 
 <p>When using a plugin, you can use a threshold/offset option to fire the thing earlier.
 But people can scroll fast.
-If someone visits a site for, lets say,
+If someone visits a site for, let&rsquo;s say,
 the third time and knows that the part she wants is somewhere close to the bottom,
 she will scroll down really, really fast.</p>
 
@@ -113,13 +113,13 @@ The selected top images will get loaded faster than usual because they won&rsquo
 
 <p>There are 10 available iterations.
 Each one waits 200ms.
-Than the script checks the image completion.</p>
+Then the script checks the image completion.</p>
 
 <p>If the last top image is ready, the script loads the bottom images and we&rsquo;re done.</p>
 
 <p>If not, we have another iteration.</p>
 
-<p>If after all iterations the last top image is still not complete,
+<p>In case that after all iterations the last top image is still not complete,
 the script will load the bottom group without waiting for anything.</p>
 
 <p>The iteration limit is useful when a connection is slow and a user starts to scroll down the page almost immediately.
@@ -179,7 +179,7 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1529877953">
+<script src="/dist/bundle.js?1530736579">
 </script>
 
 </body>
