--- a/public/complexity/index.html
+++ b/public/complexity/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1529877953">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1530736579">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -72,18 +72,18 @@ the most convoluted ones, but actually, everyday things like traffic or sales ar
 
 <p>A salesman knows that he can select and call ten
 different prospects and get “no” from nine of them. He will keep trying. He will
-adjust the course (build new heuristics) every time he notice a pattern.
+adjust the course (build new heuristics) every time he notices a pattern.
 However, he will never figure
 out a theory that universally explains what makes people buy, so that he
 can predict decisions, or call only those who will almost for sure say “yes”.
-And this is OK – he will do well anyway.
+And this is OK — he will do well anyway.
 People like him don&rsquo;t bother to do much calculation or predictions.
 They just progressively iterate, tinker, observe and judge.
 And they accept that they will never know everything.</p>
 
 <p>Just because your environment is complicated doesn&rsquo;t mean that you need to
 understand all its aspects to get by.
-It&rsquo;s about iteration and couple of good heuristics – not predictiveness.
+It&rsquo;s about iteration and couple of good heuristics — not predictiveness.
 On the other hand, learning something commonly known as
 hard and complicated doesn&rsquo;t mean that your abilities to predict the future are now greater.
 In the big picture it&rsquo;s just a bird shit.</p> 
@@ -133,7 +133,7 @@ In the big picture it&rsquo;s just a bird shit.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1529877953">
+<script src="/dist/bundle.js?1530736579">
 </script>
 
 </body>
