--- a/public/ford-marketing/index.html
+++ b/public/ford-marketing/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1529877953">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1530736579">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -83,7 +83,7 @@ The public thought nothing of a car unless it made speed—unless it beat other 
 <h2 id="lawsuit">Lawsuit</h2>
 
 <blockquote>
-<p>The powerful combination of manufacturers who called themselves the &ldquo;licensed manufacturers&rdquo;
+<p>The powerful combination of manufacturers who called themselves the “licensed manufacturers”
 because they operated under licenses from the patentee,
 brought suit against us as soon as we began to be a factor in motor production.
 <br>[&#8230;]</p>
@@ -149,7 +149,7 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
 
 </footer>
 
-<script src="/dist/bundle.js?1529877953">
+<script src="/dist/bundle.js?1530736579">
 </script>
 
 </body>
