--- a/public/henry-ford-for-makers/index.html
+++ b/public/henry-ford-for-makers/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1529877953">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1530736579">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -62,7 +62,7 @@
         
     
     <p>These are short excerpts from Henry Ford&rsquo;s “My Life and Work”. I picked
-the ones that will be helpful especially to makers&mdash;designers, developers, etc.</p>
+the ones that will be helpful especially to makers — designers, developers, etc.</p>
 
 <h2 id="simplicity">Simplicity</h2>
 
@@ -213,7 +213,7 @@ earth definitely to say what is and what is not possible.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1529877953">
+<script src="/dist/bundle.js?1530736579">
 </script>
 
 </body>
