--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1529877953">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1530736579">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -71,7 +71,7 @@ So make your life easier and build things that are easy to edit.</p>
 
 <h2 id="variables">Variables</h2>
 
-<p>With SASS variables you can control your basic UI properties from one, organised file.
+<p>With SASS variables you can control your basic UI properties from one, organized file.
 The obvious ones are font families, media queries, colors and sizes.</p>
 
 <p>Here&rsquo;s quick example:</p>
@@ -186,7 +186,7 @@ fit it into a line-hight that equals one $u.</p>
 
 <h2 id="files">Files</h2>
 
-<p>Lets assume that you spotted some problem with an article layout.
+<p>Let&rsquo;s assume that you spotted some problem with an article layout.
 If your <code>.scss</code> files are big and complex, you&rsquo;ll need to do some little research before editing.
 If you have a lot of well organized small ones you know where to go:</p>
 
@@ -217,11 +217,11 @@ If you have a lot of well organized small ones you know where to go:</p>
 <li>@mixin center</li>
 </ul>
 
-<p>Little n&rsquo; handy stuff.</p>
+<p>Little and handy stuff.</p>
 
 <h2 id="conventions-and-rules">Conventions and Rules</h2>
 
-<p>Rules and conventions are better than total configurability.
+<p>Rules and conventions are better than total customization.
 Set main building blocks of your future product and stick to them.
 It&rsquo;s better for your brain than playing with endless options.</p>
 
@@ -321,7 +321,7 @@ Maybe you won&rsquo;t remember how you figured it out.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1529877953">
+<script src="/dist/bundle.js?1530736579">
 </script>
 
 </body>
