--- a/public/resilient-ui/index.html
+++ b/public/resilient-ui/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1529877953">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1530736579">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -80,13 +80,13 @@ That way changes will be way less tedious. For instance:</p>
 
 <ol>
 <li>You can just swap UI modules in an HTML or template file.</li>
-<li>You can edit a module in its own file – no need to dig into complex code that&rsquo;s responsible for many things.</li>
+<li>You can edit a module in its own file — no need to dig into complex code that&rsquo;s responsible for many things.</li>
 </ol>
 
 <h2 id="embrace-foundations">Embrace Foundations</h2>
 
 <p>If I need to pick between working on something essential or adding bells and whistles, I pick essentials.
-It&rsquo;s just hard to be really good at all of them, so why even focus on <em>nice to haves</em>? What usually piss people off is fundamentals refusing to work as they should – not lack of <em>bahama yellow</em> in a color palette.</p>
+It&rsquo;s just hard to be really good at all of them, so why even focus on <em>nice to haves</em>? What usually piss people off is fundamentals refusing to work as they should — not lack of <em>bahama yellow</em> in a color palette.</p>
 
 <p>Working extra on things like clarity (intuitiveness, readability) and speed
 will give you more than any neophiliac thing.</p>
@@ -113,7 +113,7 @@ People will often use your stuff at train stations, airports or in restaurants. 
 <p>People say “a picture is like a thousand words”.
 But a picture will not make a proposition as clear and precise as a well designed sentence or phrase.
 Text is also trivial to edit.
-That&rsquo;s why I like typography – it&rsquo;s a tool to achieve clarity and flexibility.</p>
+That&rsquo;s why I like typography — it&rsquo;s a tool to achieve clarity and flexibility.</p>
 
 <p>Don&rsquo;t overthink that weird icon. If it&rsquo;s not obvious, text will be better.</p> 
     <div class="date secondary"> Apr 5, 2017 </div>
@@ -165,7 +165,7 @@ That&rsquo;s why I like typography – it&rsquo;s a tool to achieve clarity and 
 
 </footer>
 
-<script src="/dist/bundle.js?1529877953">
+<script src="/dist/bundle.js?1530736579">
 </script>
 
 </body>
