--- a/public/vim-typography/index.html
+++ b/public/vim-typography/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1529877953">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1530736579">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -119,7 +119,7 @@ with a nice theme:</p>
 <ul>
 <li>error highlighting (ie: spellcheck),</li>
 <li>character limit line,</li>
-<li>current line highlight (not so bad but still worst than GUI apps).</li>
+<li>current line highlight (not so bad but still worse than GUI apps).</li>
 </ul>
 
 <p>Sometimes they work more like distractions than like handy hits.
@@ -204,7 +204,7 @@ Consider using some of them in <code>.gvimrc</code> instead of <code>.vimrc</cod
 
 </footer>
 
-<script src="/dist/bundle.js?1529877953">
+<script src="/dist/bundle.js?1530736579">
 </script>
 
 </body>
