--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1529877953">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1530736579">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -335,7 +335,7 @@ the most convoluted ones, but actually, everyday things like traffic or sales ar
         
           <p>You need experimentation with freedom. Play to figure things out and get unstuck.</p>
 
-<p>Ideas that you get by doing are more in touch with reality – they are more likely to work.</p>
+<p>Ideas that you get by doing are more in touch with reality — they are more likely to work.</p>
  
         
 
@@ -538,7 +538,7 @@ You need to design your software with ease of modification in mind.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1529877953">
+<script src="/dist/bundle.js?1530736579">
 </script>
 
 </body>
