--- a/public/play/index.html
+++ b/public/play/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1529877953">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1530736579">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -63,7 +63,7 @@
     
     <p>You need experimentation with freedom. Play to figure things out and get unstuck.</p>
 
-<p>Ideas that you get by doing are more in touch with reality – they are more likely to work.</p>
+<p>Ideas that you get by doing are more in touch with reality — they are more likely to work.</p>
  
     <div class="date secondary"> Nov 16, 2017 </div>
   </div>
@@ -114,7 +114,7 @@
 
 </footer>
 
-<script src="/dist/bundle.js?1529877953">
+<script src="/dist/bundle.js?1530736579">
 </script>
 
 </body>
