--- a/public/research-decision/index.html
+++ b/public/research-decision/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1529877953">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1530736579">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -78,7 +78,7 @@ Than it&rsquo;s no longer just a picture in your head <a href="https://bart747.g
 It&rsquo;s clickable.
 You can see actual performance.</p>
 
-<p>Than, if you <strong>know where you&rsquo;re going</strong>, you know how to correct the course.
+<p>Then, if you <strong>know where you&rsquo;re going</strong>, you know how to correct the course.
 You make a decision about the next move and stop looking for crystal balls.</p>
 
 <p>BTW, have you heard about <a href="https://www.youtube.com/watch?v=S8sqQ_p6aR8">The Foolscap Method</a>?</p> 
@@ -131,7 +131,7 @@ You make a decision about the next move and stop looking for crystal balls.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1529877953">
+<script src="/dist/bundle.js?1530736579">
 </script>
 
 </body>
