--- a/public/ui-coins/index.html
+++ b/public/ui-coins/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1529877953">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1530736579">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -63,7 +63,7 @@
     
     <p>Contrast is an essential concept when it comes to UI usability. It solves more problems than you think.</p>
 
-<p>Lets take coins as an example.
+<p>Let&rsquo;s take coins as an example.
 When it comes to look: at first glance you see differences in size, color (types of metals) and visual patterns.
 Feel in hand is also important. Some seem heavier than others. You can detect size by touch too.
 Each of these features is useful in some situation.</p>
@@ -133,7 +133,7 @@ Way better than just <em>Password</em>, which will make both forms look very sim
 
 </footer>
 
-<script src="/dist/bundle.js?1529877953">
+<script src="/dist/bundle.js?1530736579">
 </script>
 
 </body>
