create "share quote" widget

--- a/public/henry-ford-for-makers/index.html
+++ b/public/henry-ford-for-makers/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1531516220">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1531935396">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -30,6 +30,7 @@
 
 </head>
 <body>
+<div id="allwrapper">
 
 
 <nav id="nav top" class="topbar">
@@ -52,7 +53,7 @@
 
 
 
-<section class="article">
+<section class="article selectable-article">
 
   
 
@@ -214,8 +215,9 @@ earth definitely to say what is and what is not possible.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1531516220">
+<script src="/dist/bundle.js?1531935396">
 </script>
 
+</div>
 </body>
 </html>
