--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1531516220">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1531935396">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -30,6 +30,7 @@
 
 </head>
 <body>
+<div id="allwrapper">
 
 <div id="top"></div> 
 <div class="top-animation">
@@ -622,8 +623,9 @@ It&rsquo;s about handling negative emotions, picking the right thing to work on,
 
 </footer>
 
-<script src="/dist/bundle.js?1531516220">
+<script src="/dist/bundle.js?1531935396">
 </script>
 
+</div>
 </body>
 </html>
