--- a/public/patterns/index.html
+++ b/public/patterns/index.html
@@ -17,7 +17,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1531516220">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1531935396">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -30,6 +30,7 @@
 
 </head>
 <body>
+<div id="allwrapper">
 
 
 <div class="patterns">
@@ -213,7 +214,7 @@
 
 <section class="patterns--section">
   <h2 class="patterns--title">article</h2>
-  <section class="article">
+  <section class="article selectable-article">
 
   
 
@@ -327,9 +328,10 @@ Than you can adjust to the real world without tedious redesigns:
 
 </footer>
 
-<script src="/dist/bundle.js?1531516220">
+<script src="/dist/bundle.js?1531935396">
 </script>
 
+</div>
 </body>
 </html>
 </section>
