minor article edits

--- a/public/complexity/index.html
+++ b/public/complexity/index.html
@@ -20,7 +20,7 @@ We think that some technical (software/hardware) problems are
 the most convoluted ones, but actually, everyday things like traffic or sales are way more complex.
 
 ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -52,7 +52,7 @@ the most convoluted ones, but actually, everyday things like traffic or sales ar
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -170,7 +170,7 @@ In the big picture it&rsquo;s just a bird shit.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
