--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -21,7 +21,7 @@ So make your life easier and build things that are easy to edit.
 Here are some examples of SASS based solutions that you can use to make UI more maintainable and “themable”.
 
 ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -55,7 +55,7 @@ Here are some examples of SASS based solutions that you can use to make UI more 
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -361,7 +361,7 @@ Maybe you won&rsquo;t remember how you figured it out.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
