--- a/public/vim-typography/index.html
+++ b/public/vim-typography/index.html
@@ -18,7 +18,7 @@
 All examples are for editing .vimrc and .gvimrc files.
 
 ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -46,7 +46,7 @@ All examples are for editing .vimrc and .gvimrc files.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -235,7 +235,7 @@ Consider using some of them in <code>.gvimrc</code> instead of <code>.vimrc</cod
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
