--- a/public/404.html
+++ b/public/404.html
@@ -15,7 +15,7 @@
   
   <meta itemprop="name" content="404 Page not found">
   <meta itemprop="description" content="">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -37,7 +37,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961223">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -125,7 +125,7 @@
 
 </footer>
 
-<script src="/dist/bundle.js?1532961223">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
