--- a/public/alt-lazy-load/index.html
+++ b/public/alt-lazy-load/index.html
@@ -19,7 +19,7 @@ Do you remember that situation when you scrolled down
 quickly to get to the middle part and the picture wasn&rsquo;t there yet?
 
 ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -49,7 +49,7 @@ quickly to get to the middle part and the picture wasn&rsquo;t there yet?
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961223">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -213,7 +213,7 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1532961223">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
