--- a/public/craftsmen-at-work/index.html
+++ b/public/craftsmen-at-work/index.html
@@ -16,7 +16,7 @@
   <meta itemprop="name" content="Looking at Craftsmen">
   <meta itemprop="description" content="I enjoy looking at craftsmen at work. You can learn from it by seeing the process, tricks of the trade, work on details that most people won&rsquo;t even notice. It doesn&rsquo;t matter that it&rsquo;s not my field. It&rsquo;s about that detail-oriented thinking.
 Video made by Wranglerstar.">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -40,7 +40,7 @@ Video made by Wranglerstar.">
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -150,7 +150,7 @@ You can learn from it by seeing the process, tricks of the trade, work on detail
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
