--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -18,7 +18,7 @@
 How to show an error indicator during live validation? How to manage a few different ways of validation?
 
 ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -46,7 +46,7 @@ How to show an error indicator during live validation? How to manage a few diffe
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961223">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -240,7 +240,7 @@ When a structure is right, a procedure that uses it can be more straight forward
 
 </footer>
 
-<script src="/dist/bundle.js?1532961223">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
