--- a/public/jekyll-speed/index.html
+++ b/public/jekyll-speed/index.html
@@ -20,7 +20,7 @@ It took around 1 minute per regeneration and much more for starting a server.
 I made some improvement by excluding a few files from the conversion.
 
 ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -52,7 +52,7 @@ I made some improvement by excluding a few files from the conversion.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -171,7 +171,7 @@ it was hidden somewhere deeper in the directory.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
