--- a/public/lynch-ideas/index.html
+++ b/public/lynch-ideas/index.html
@@ -25,7 +25,7 @@ When you&rsquo;re in a creative flow ideas are easier to catch
 By the way, just look at these amazing animations and color compositions.
 
 ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -67,7 +67,7 @@ By the way, just look at these amazing animations and color compositions.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -183,7 +183,7 @@ By the way, just look at these amazing animations and color compositions.
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
