--- a/public/offline/index.html
+++ b/public/offline/index.html
@@ -16,7 +16,7 @@
   <meta itemprop="name" content="Dang! It looks like you&#39;re offline.">
   <meta itemprop="description" content="Here&rsquo;s some saved content you might enjoy:
  5 Notes on How to Design a Resilient UI Research vs Making Decisions Henry Ford for Makers: Quotes on Design  ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -40,7 +40,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961223">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -120,7 +120,7 @@
 
 </footer>
 
-<script src="/dist/bundle.js?1532961223">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
