--- a/public/patterns/index.html
+++ b/public/patterns/index.html
@@ -15,7 +15,7 @@
   
   <meta itemprop="name" content="">
   <meta itemprop="description" content="Modular Interfaces  Modular UIs are easier to edit in the long run. When your interface is divided into distinct parts, you can also separate chunks of code by following that divisions. Than you can adjust to the real world without tedious redesigns:  You can just swap UI modules in an HTML or template file. You can edit a module in its own file — no need to dig into complex code that’s responsible for many things.">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -37,7 +37,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -348,7 +348,7 @@ Than you can adjust to the real world without tedious redesigns:
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
