--- a/public/payment-ui-friction/index.html
+++ b/public/payment-ui-friction/index.html
@@ -21,7 +21,7 @@ and transaction safety.
 The fact that you&rsquo;re about to say bye to some of your money triggers that.
 
 ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -55,7 +55,7 @@ The fact that you&rsquo;re about to say bye to some of your money triggers that.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -169,7 +169,7 @@ two back to just in case check data again.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
