--- a/public/planck/index.html
+++ b/public/planck/index.html
@@ -22,7 +22,7 @@ its opponents and making them see the light,
 but rather because its opponents eventually die,
 and a new generation grows up that is familiar with it.
 ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -58,7 +58,7 @@ and a new generation grows up that is familiar with it.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -195,7 +195,7 @@ his whole world for the moment.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
