--- a/public/play/index.html
+++ b/public/play/index.html
@@ -16,7 +16,7 @@
   <meta itemprop="name" content="Play is Essential">
   <meta itemprop="description" content="You need experimentation with freedom. Play to figure things out and get unstuck.
 Ideas that you get by doing are more in touch with reality — they are more likely to work.">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -40,7 +40,7 @@ Ideas that you get by doing are more in touch with reality — they are more lik
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -139,7 +139,7 @@ Ideas that you get by doing are more in touch with reality — they are more lik
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
