--- a/public/research-decision/index.html
+++ b/public/research-decision/index.html
@@ -19,7 +19,7 @@ You want to be sure, so you seek more.
 But your brain is somehow full of doubts all the time, no matter what you know.
 
 ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -49,7 +49,7 @@ But your brain is somehow full of doubts all the time, no matter what you know.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -165,7 +165,7 @@ You make a decision about the next move and stop looking for crystal balls.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
