--- a/public/resilient-ui/index.html
+++ b/public/resilient-ui/index.html
@@ -22,7 +22,7 @@ It happens all the time. Don&rsquo;t think you can predict the future.
 You need to design your software with ease of modification in mind.
 
 ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -58,7 +58,7 @@ You need to design your software with ease of modification in mind.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -208,7 +208,7 @@ That&rsquo;s why I like typography — it&rsquo;s a tool to achieve clarity and 
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
