--- a/public/ui-coins/index.html
+++ b/public/ui-coins/index.html
@@ -22,7 +22,7 @@ Feel in hand is also important. Some seem heavier than others. You can detect si
 Each of these features is useful in some situation.
 
 ">
-  
+  <meta itemprop="image" content="">
 
   
   <meta property="og:url" content="https://bart747.github.io">
@@ -58,7 +58,7 @@ Each of these features is useful in some situation.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532961222">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1532969300">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -176,7 +176,7 @@ Way better than just <em>Password</em>, which will make both forms look very sim
 
 </footer>
 
-<script src="/dist/bundle.js?1532961222">
+<script src="/dist/bundle.js?1532969300">
 </script>
 
 </div>
