--- a/public/complexity/index.html
+++ b/public/complexity/index.html
@@ -49,7 +49,7 @@ the most convoluted ones, but actually, everyday things like traffic or sales ar
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1533055193">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1533387813">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -135,6 +135,9 @@ In the big picture it&rsquo;s just a bird shit.</p>
   </div>
   <div class="subnav--line">
     
+      <div class="subnav--tag">next: </div>
+      <div><a class="next" href="https://bart747.github.io/crowd/"> Old Programming Wisdom Beats Crowdsourced Advice</a></div>
+    
   </div>
 </section>
 
@@ -167,7 +170,7 @@ In the big picture it&rsquo;s just a bird shit.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1533055193">
+<script src="/dist/bundle.js?1533387813">
 </script>
 
 </div>
