--- a/public/crowd/index.html
+++ b/public/crowd/index.html
@@ -46,7 +46,7 @@ show signs of independent thinking.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1533387813">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535320064">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -102,7 +102,7 @@ show signs of independent thinking.</p>
 <a href="http://www.paulgraham.com">paulgraham.com</a>, are still my favorite mediums.</p>
 
 <p>Being <strong>good at avoiding groupthink</strong>, which includes so called “industry standards,” is on point.
-An avarage set of methods of top 50% of professionals is a way different thing than what you get by analyzing how top 10% operates.
+An average set of methods of the top 50% of professionals is a way different thing than what you get by analyzing how the top 10% operates.
 When someone starts advising you with, “today, most people,” don&rsquo;t expect a productive discussion.</p>
 
 <p>Below is a couple of quotes of people who did something right and we can learn from.
@@ -203,7 +203,7 @@ It&rsquo;s not a kind of content you see often. There are many programs written 
 
 </footer>
 
-<script src="/dist/bundle.js?1533387813">
+<script src="/dist/bundle.js?1535320064">
 </script>
 
 </div>
