fix typos, minor text edits

--- a/public/crowd/index.html
+++ b/public/crowd/index.html
@@ -13,7 +13,7 @@
 
   
   <meta itemprop="name" content="Old Programming Wisdom Beats Crowdsourced Advice">
-  <meta itemprop="description" content="Programmers as a crowd, like any crowd, are dumb. People find some wierd kind of safety in following popular opinion. They see it as something of high value — worth sacrificing trust in their own instincts.
+  <meta itemprop="description" content="Programmers as a crowd, like any crowd, are dumb. People find safety in following popular opinions. They see it as something of high value — worth sacrificing trust in their own instincts.
 This is why I like to look for advice by turning to individuals who achieved something worth admiring and
 show signs of independent thinking.
 
@@ -23,7 +23,7 @@ show signs of independent thinking.
   <meta property="og:url" content="https://bart747.github.io">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Old Programming Wisdom Beats Crowdsourced Advice">
-  <meta property="og:description" content="Programmers as a crowd, like any crowd, are dumb. People find some wierd kind of safety in following popular opinion. They see it as something of high value — worth sacrificing trust in their own instincts.
+  <meta property="og:description" content="Programmers as a crowd, like any crowd, are dumb. People find safety in following popular opinions. They see it as something of high value — worth sacrificing trust in their own instincts.
 This is why I like to look for advice by turning to individuals who achieved something worth admiring and
 show signs of independent thinking.
 
@@ -33,7 +33,7 @@ show signs of independent thinking.
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Old Programming Wisdom Beats Crowdsourced Advice">
   <meta name="twitter:creator" content="@bwhimself">
-  <meta name="twitter:description" content="Programmers as a crowd, like any crowd, are dumb. People find some wierd kind of safety in following popular opinion. They see it as something of high value — worth sacrificing trust in their own instincts.
+  <meta name="twitter:description" content="Programmers as a crowd, like any crowd, are dumb. People find safety in following popular opinions. They see it as something of high value — worth sacrificing trust in their own instincts.
 This is why I like to look for advice by turning to individuals who achieved something worth admiring and
 show signs of independent thinking.
 
@@ -46,7 +46,7 @@ show signs of independent thinking.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535320064">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535673288">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -92,7 +92,7 @@ show signs of independent thinking.
       <h1 class="article-title">Old Programming Wisdom Beats Crowdsourced Advice</h1>
      
 
-    <p>Programmers as a crowd, like any crowd, are dumb. People find some wierd kind of safety in following popular opinion. They see it as something of high value — worth sacrificing trust in their own instincts.
+    <p>Programmers as a crowd, like any crowd, are dumb. People find safety in following popular opinions. They see it as something of high value — worth sacrificing trust in their own instincts.
 This is why I like to look for advice by turning to individuals who achieved something worth admiring and
 show signs of independent thinking.</p>
 
@@ -203,7 +203,7 @@ It&rsquo;s not a kind of content you see often. There are many programs written 
 
 </footer>
 
-<script src="/dist/bundle.js?1535320064">
+<script src="/dist/bundle.js?1535673288">
 </script>
 
 </div>
