--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535320064">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535673288">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -266,7 +266,7 @@
       <div class="article--narrow">
 
         
-          <p>Programmers as a crowd, like any crowd, are dumb. People find some wierd kind of safety in following popular opinion. They see it as something of high value — worth sacrificing trust in their own instincts.
+          <p>Programmers as a crowd, like any crowd, are dumb. People find safety in following popular opinions. They see it as something of high value — worth sacrificing trust in their own instincts.
 This is why I like to look for advice by turning to individuals who achieved something worth admiring and
 show signs of independent thinking.</p>
 
@@ -640,7 +640,7 @@ The public thought nothing of a car unless it made speed—unless it beat other 
 
 </footer>
 
-<script src="/dist/bundle.js?1535320064">
+<script src="/dist/bundle.js?1535673288">
 </script>
 
 </div>
