minor article edits

--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -52,7 +52,7 @@ Here are some examples of SASS based solutions that you can use to make UI more 
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535673288">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535675812">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -272,7 +272,7 @@ It&rsquo;s better for your brain than playing with endless options.</p>
 
 <p>Building a gallery based on halves and quarters, or rule of thirds gives enough flexibility.</p>
 
-<p>Your article page doesn&rsquo;t need a three–column version.</p>
+<p>Your article page doesn&rsquo;t need a three-column version.</p>
 
 <p>One media-object layout with extra modifier classes is better than a few completely different ones.
 Mod classes are something like this: <code>.photo-big,
@@ -358,7 +358,7 @@ Maybe you won&rsquo;t remember how you figured it out.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1535673288">
+<script src="/dist/bundle.js?1535675812">
 </script>
 
 </div>
