--- a/public/payment-ui-friction/index.html
+++ b/public/payment-ui-friction/index.html
@@ -13,7 +13,7 @@
 
   
   <meta itemprop="name" content="Payment UIs Can be Used to Reduce Friction">
-  <meta itemprop="description" content="A page with a final &ldquo;buy&rdquo; button or a credit card data form
+  <meta itemprop="description" content="A page with a final “buy” button or a credit card data form
 is a huge friction trigger.
 It&rsquo;s the moment when you, as a buyer, think again about expense
 and transaction safety.
@@ -25,7 +25,7 @@ The fact that you&rsquo;re about to say bye to some of your money triggers that.
   <meta property="og:url" content="https://bart747.github.io">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Payment UIs Can be Used to Reduce Friction">
-  <meta property="og:description" content="A page with a final &ldquo;buy&rdquo; button or a credit card data form
+  <meta property="og:description" content="A page with a final “buy” button or a credit card data form
 is a huge friction trigger.
 It&rsquo;s the moment when you, as a buyer, think again about expense
 and transaction safety.
@@ -37,7 +37,7 @@ The fact that you&rsquo;re about to say bye to some of your money triggers that.
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Payment UIs Can be Used to Reduce Friction">
   <meta name="twitter:creator" content="@bwhimself">
-  <meta name="twitter:description" content="A page with a final &ldquo;buy&rdquo; button or a credit card data form
+  <meta name="twitter:description" content="A page with a final “buy” button or a credit card data form
 is a huge friction trigger.
 It&rsquo;s the moment when you, as a buyer, think again about expense
 and transaction safety.
@@ -52,7 +52,7 @@ The fact that you&rsquo;re about to say bye to some of your money triggers that.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535673288">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535675812">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -98,7 +98,7 @@ The fact that you&rsquo;re about to say bye to some of your money triggers that.
       <h1 class="article-title">Payment UIs Can be Used to Reduce Friction</h1>
      
 
-    <p>A page with a final &ldquo;buy&rdquo; button or a credit card data form
+    <p>A page with a final “buy” button or a credit card data form
 is a huge friction trigger.
 It&rsquo;s the moment when you, as a buyer, think again about expense
 and transaction safety.
@@ -166,7 +166,7 @@ two back to just in case check data again.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1535673288">
+<script src="/dist/bundle.js?1535675812">
 </script>
 
 </div>
