--- a/public/vim-typography/index.html
+++ b/public/vim-typography/index.html
@@ -43,7 +43,7 @@ All examples are for editing .vimrc and .gvimrc files.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535673288">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535675812">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -134,7 +134,7 @@ and can&rsquo;t or don&rsquo;t want to use when Vim is running via terminal.</p>
 <code>line-height</code> in CSS.
 It sets the space between lines, not leading.</p>
 
-<p>The default is 0. I like to use something around 4 or 5&mdash;it depends on
+<p>The default is 0. I like to use something around 4 or 5, it depends on
 the font face.</p>
 
 <h2 id="general">General:</h2>
@@ -232,7 +232,7 @@ Consider using some of them in <code>.gvimrc</code> instead of <code>.vimrc</cod
 
 </footer>
 
-<script src="/dist/bundle.js?1535673288">
+<script src="/dist/bundle.js?1535675812">
 </script>
 
 </div>
