--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -43,7 +43,7 @@ How to show an error indicator during live validation? How to manage a few diffe
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535673289">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535675812">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -127,7 +127,7 @@ we have easy access to everything inside them.
 It can be, for instance, a label, an icon or a text below a field.</p>
 
 <p>In each iteration it can check what kind of input it&rsquo;s dealing with, and
-then attache a proper method of validation.</p>
+then attach a proper method of validation.</p>
 
 <h2 id="input-with-an-error-indicator">Input with an error indicator</h2>
 
@@ -237,7 +237,7 @@ When a structure is right, a procedure that uses it can be more straight forward
 
 </footer>
 
-<script src="/dist/bundle.js?1535673289">
+<script src="/dist/bundle.js?1535675812">
 </script>
 
 </div>
