--- a/public/ui-coins/index.html
+++ b/public/ui-coins/index.html
@@ -55,7 +55,7 @@ Each of these features is useful in some situation.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535673288">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1535675812">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -111,7 +111,7 @@ Each of these features is useful in some situation.</p>
 <p></p>
 
 <p>By analogy, you can do something similar with interfaces.
-Font sizes attached to HTML tags – h1, h2, h3, p – are well known, trivial example.</p>
+Font sizes attached to HTML tags — h1, h2, h3, p — are obvious example.</p>
 
 <p>Forms are more tricky. Sign-up and sign-in forms often look similar and appear in similar places.
 To create a useful contrasts we can give them different titles and labels.
@@ -173,7 +173,7 @@ Way better than just <em>Password</em>, which will make both forms look very sim
 
 </footer>
 
-<script src="/dist/bundle.js?1535673288">
+<script src="/dist/bundle.js?1535675812">
 </script>
 
 </div>
