remove unwanted article

--- a/public/vim-typography/index.html
+++ b/public/vim-typography/index.html
@@ -43,7 +43,7 @@ All examples are for editing .vimrc and .gvimrc files.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1537293921">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1537293991">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -198,7 +198,7 @@ Consider using some of them in <code>.gvimrc</code> instead of <code>.vimrc</cod
   <div class="subnav--line">
     
       <div class="subnav--tag">next: </div>
-      <div><a class="next" href="https://bart747.github.io/jekyll-speed/"> A Hint on How to Speed Up Jekyll Regeneration</a></div>
+      <div><a class="next" href="https://bart747.github.io/payment-ui-friction/"> Payment UIs Can be Used to Reduce Friction</a></div>
     
   </div>
 </section>
@@ -232,7 +232,7 @@ Consider using some of them in <code>.gvimrc</code> instead of <code>.vimrc</cod
 
 </footer>
 
-<script src="/dist/bundle.js?1537293921">
+<script src="/dist/bundle.js?1537293991">
 </script>
 
 </div>
