--- a/public/payment-ui-friction/index.html
+++ b/public/payment-ui-friction/index.html
@@ -52,7 +52,7 @@ The fact that you&rsquo;re about to say bye to some of your money triggers that.
 
   
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1537293921">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1537293991">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -126,7 +126,7 @@ two back to just in case check data again.</p>
   <div class="subnav--line">
     
       <div class="subnav--tag">prev: </div>
-      <div><a class="previous" href="https://bart747.github.io/jekyll-speed/"> A Hint on How to Speed Up Jekyll Regeneration</a></div>
+      <div><a class="previous" href="https://bart747.github.io/vim-typography/"> Vim Typography: Better Readability and Look</a></div>
     
   </div>
   <div class="subnav--line">
@@ -166,7 +166,7 @@ two back to just in case check data again.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1537293921">
+<script src="/dist/bundle.js?1537293991">
 </script>
 
 </div>
