minor ui redesign, typography focused

--- a/public/complexity/index.html
+++ b/public/complexity/index.html
@@ -48,8 +48,8 @@ the most convoluted ones, but actually, everyday things like traffic or sales ar
   
 
   
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1537293991">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1538500877">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -170,7 +170,7 @@ In the big picture it&rsquo;s just a bird shit.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1537293991">
+<script src="/dist/bundle.js?1538500877">
 </script>
 
 </div>
