--- a/public/adaptability-planning/index.html
+++ b/public/adaptability-planning/index.html
@@ -36,8 +36,8 @@
   
 
   
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1537293991">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1538500877">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -153,7 +153,7 @@ Written and presented by Stewart Brand.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1537293991">
+<script src="/dist/bundle.js?1538500877">
 </script>
 
 </div>
