--- a/public/alt-lazy-load/index.html
+++ b/public/alt-lazy-load/index.html
@@ -45,8 +45,8 @@ quickly to get to the middle part and the picture wasn&rsquo;t there yet?
   
 
   
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1537293991">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1538500877">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -210,7 +210,7 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1537293991">
+<script src="/dist/bundle.js?1538500877">
 </script>
 
 </div>
