--- a/public/henry-ford-for-makers/index.html
+++ b/public/henry-ford-for-makers/index.html
@@ -69,8 +69,8 @@ much simpler than they now are and at the same time be better looking.
   
 
   
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1537293991">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1538500877">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -268,7 +268,7 @@ earth definitely to say what is and what is not possible.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1537293991">
+<script src="/dist/bundle.js?1538500877">
 </script>
 
 </div>
