--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -42,8 +42,8 @@ How to show an error indicator during live validation? How to manage a few diffe
   
 
   
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1537293991">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1538500877">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -237,7 +237,7 @@ When a structure is right, a procedure that uses it can be more straight forward
 
 </footer>
 
-<script src="/dist/bundle.js?1537293991">
+<script src="/dist/bundle.js?1538500877">
 </script>
 
 </div>
